Remove report link from about page

--- a/src/text/AboutPage.mdx
+++ b/src/text/AboutPage.mdx
@@ -16,4 +16,4 @@ The project was led by researchers at Strathmore University, University of Nairo
 
 ## Data sources
 
-Qualitative data collection (stakeholder interviews) was led by University of Nairobi. Quantitaive data collection (e.g. vehicle stock data; suitable technologies) was led by Association for Electric Mobility in Africa (AFEMA). A complete description of the project, including all data collection methodologies, is given in [link to final project report when it exists]().
+Qualitative data collection (stakeholder interviews) was led by University of Nairobi. Quantitaive data collection (e.g. vehicle stock data; suitable technologies) was led by Association for Electric Mobility in Africa (AFEMA).
